test/Fail/Issue1209-4-2.err
Issue1209-4-2.agda:18.1-20.48: error: [TerminationIssue]
Termination checking failed for the following function:
  repeat
Problematic call:
  repeat x
    (at Issue1209-4-2.agda:20.39-45)
